--- a/src/components/Color/Color.module.scss
+++ b/src/components/Color/Color.module.scss
@@ -1,3 +1,28 @@
+@import '../../variables';
+
 .Color {
     flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+    padding: 4rem;
+}
+
+.ColorValue {
+    width: 100%;
+    background: none;
+    border: none;
+    text-align: center;
+    font-size: 3.5rem;
+    color: $white;
+    letter-spacing: 1px;
+    opacity: 0.4;
+    cursor: pointer;
+
+    &:focus {
+        outline: none;
+    }
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
