--- a/src/components/Color/Color.module.scss
+++ b/src/components/Color/Color.module.scss
@@ -6,7 +6,6 @@
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-    padding: 4rem;
 }
 
 .ColorValue {
@@ -16,9 +15,11 @@
     text-align: center;
     font-size: 2.5rem;
     color: $white;
+    text-shadow: 0 0 4px $dark;
     letter-spacing: 1px;
     opacity: 0.4;
     cursor: pointer;
+    margin: 4rem 0;
 
     &:focus {
         outline: none;
@@ -31,8 +32,8 @@
 
 .Locked,
 .Unlocked {
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: 4rem;
     fill: $white;
     cursor: pointer;
 }
