--- a/src/components/Color/Color.module.scss
+++ b/src/components/Color/Color.module.scss
@@ -6,6 +6,7 @@
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
+    height: 100%;
 }
 
 .ColorValue {
@@ -19,7 +20,7 @@
     letter-spacing: 1px;
     opacity: 0.4;
     cursor: pointer;
-    margin: 4rem 0;
+    margin-top: 4rem;
 
     &:focus {
         outline: none;
@@ -28,6 +29,14 @@
     &:hover {
         opacity: 0.7;
     }
+}
+
+.RgbValue {
+    font-size: 1.5rem;
+    color: $white;
+    text-shadow: 0 0 4px $dark;
+    opacity: 0.8;
+    margin: 4rem 0;
 }
 
 .Locked,
