--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,8 +3,22 @@
 .Header {
     padding: 2rem;
     box-shadow: 0 3px 6px rgba($dark, 0.15);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .Text {
     color: $grey;
+}
+
+.UnlockAll {
+    fill: $primary;
+    width: 2.5rem;
+    height: 2.5rem;
+    transition: fill 0.25s ease-in-out;
+
+    &:hover {
+        fill: $dark-primary;
+    }
 }
