--- a/src/components/Color/Color.module.scss
+++ b/src/components/Color/Color.module.scss
@@ -2,6 +2,16 @@
 
 .Svg {
     margin-top: 3rem;
+    fill: $white;
+    width: 4rem;
+    height: 4rem;
+    opacity: 0.6;
+    transition: fill 0.25s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.8;
+    }
 }
 
 .Color {
@@ -45,14 +55,9 @@
 }
 
 .ShadesButton {
-    width: 4rem;
-    height: 4rem;
     fill: $white;
     cursor: pointer;
     margin-top: 3rem;
-}
-
-.ShadesButton {
     width: 3.5rem;
     height: 3.5rem;
     opacity: 0.6;
