fixed color responsive issue on large scale

--- a/src/components/Color/Color.module.scss
+++ b/src/components/Color/Color.module.scss
@@ -14,8 +14,11 @@
     }
 }
 
-.Color {
+.AnimatedColor {
     flex-grow: 1;
+}
+
+.Color {
     display: flex;
     justify-content: flex-end;
     align-items: center;
